header forward strategy and dockerfile config